# saruman

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.cpp  common.hpp  objcat.cpp  objinfo.cpp  objpatch.cpp
elfio-3.2/: README  URL
elfio-3.2/elfio/: elfio.hpp  elfio_header.hpp  elfio_section.hpp  elfio_segment.hpp  elfio_utils.hpp
tclap-1.2.1/: FULL_SOURCE
